docs/stylesheets/_nav.css
.md-sidebar {
    min-height: 75vh;
    padding-inline: 1rem;
    flex-basis: 14rem;
    flex-shrink: 1;
    background-image: linear-gradient(var(--sky-blue-grey), white);
    top: 4.3rem !important;
    width: 14rem;
}

.md-sidebar, .md-sidebar__scrollwrap  {
    overflow: visible;
}

.md-nav__title {
    padding: 0 0.8rem !important;
    display: flex;
    align-items: flex-end;
}

.md-nav__title a {
    position: static !important;
}

.md-nav__link, .md-nav__title {
    background: none !important;
    box-shadow: none !important;
}

.md-nav__list:last-child {
    margin-bottom: 2rem;
}

#version-container .md-header__ellipsis {
    padding-inline: 0.6rem;
}

#version-container .md-header__topic {
    align-items: flex-start;
}

#version-container .md-header__topic, .md-version__current, .md-version {
    font-size: 0.7rem;
    line-height: 0.7rem;
}

.md-version {
    display: flex;
    align-items: flex-start;
    position: relative;
    top: -1px;
}

.md-version__current {
    padding-left: 0.6rem;
    margin: 0 !important;
}

.md-version__list {
    margin: 0 !important;
    margin-left: 0.2rem !important;
    top: -0.5rem;
}

[dir="ltr"] .md-version__link {
    padding-inline: 0.4rem;
}

[dir="ltr"] .md-header__title {
    margin-left: 0;
}

@media screen and (max-width: 76.1875em) {
    [data-md-toggle="drawer"]:checked ~ .md-container .md-sidebar--primary {
        transform: translateX(14rem);
    }

    .md-sidebar--primary {
        left: -14rem !important;
        top: 0 !important;
        display: block !important;
    }

    .md-sidebar--primary .top-level {
        display: block !important;
        flex-basis: fit-content;
        flex-grow: 0;
    }

    .md-sidebar--primary .sub-level {
        margin-left: 1rem;
    }

    .md-sidebar--primary .top-level li {
        padding: 0.6rem 0.8rem;
        font-size: 0.8rem;
        font-weight: bold;
    }

    .md-sidebar--primary .alces-link {
        display: block !important;
        align-self: center;
    }

    .md-nav--primary {
        background-image: linear-gradient(var(--sky-blue-grey), white);
    }

    .md-nav-logo {
        padding: 0 !important;
        margin: 0 !important;
        align-self: center;
    }

    .md-nav__list {
        background-color: transparent !important;
    }

    #version-container {
        width: 100%;
    }

    #version-container .md-header__topic {
        padding-top: 0.8rem;
        align-items: flex-start;
    }

    #version-container .md-header__ellipsis {
        padding-inline: 0.8rem;
    }

    .md-version {
        top: 0;
    }
}

